[metadata]
name = puppet-openstack_spec_helper
summary = Puppet module for OpenStack Openstack_spec_helper
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
