[metadata]
name = puppet-openstack_spec_helper
summary = Puppet module for OpenStack Openstack_spec_helper
description_file =
    README.md
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://www.openstack.org/
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
